// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseEmulator should render correctly 1`] = `
<button
  className="md-btn md-btn--icon md-pointer--hover md-inline-block"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <i
    className="md-icon material-icons md-text--inherit"
    style={undefined}
  >
    close
  </i>
</button>
`;

exports[`CloseEmulator should render correctly 2`] = `
<button
  className="md-btn md-btn--raised md-btn--text md-pointer--hover md-background--primary md-background--primary-hover md-inline-block"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Hello, World!
</button>
`;
